--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,21 @@
   font-weight: 400;
   /* background-color: #0a0a0a; */
   background-color: rgb(21, 21, 21);
+  /* background-color: goldenrod; */
   color: #fff;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+
 }
+
+/* * {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+} */
