--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -3,6 +3,7 @@
     min-height: 100vh;
     padding: 3rem 1rem 3rem 1rem;
     text-align: center;
+    box-sizing: border-box;
 }
 
 .homeTitle {
