--- a/src/pages/mysharing/myshare.css
+++ b/src/pages/mysharing/myshare.css
@@ -32,3 +32,9 @@
     color: rgb(255, 255, 255);
     font-size: 1rem;
 }
+
+@media screen and (max-width:480px) {
+    .contentContainer {
+        padding: 1rem;
+    }
+}
